--- a/index.html
+++ b/index.html
@@ -5,25 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>昆汀电影博物馆</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
+    <style>
+        body{
+            padding-top: 70px;
+        }
+        #NavBrand{
+            font-size: 17px;
+            padding-right: 50px;
+        }
+
+    </style>
 
 </head>
 <body>
-<!--导航栏-->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="menu-nav">
-    <ul>
-        <li><a href="#">轮播</a></li>
-        <li><a href="#">简介</a></li>
-        <li><a href="#">人物</a> </li>
-        <li><a href="#">关于</a> </li>
-    </ul>
-</div>
-<script src="js/jquery-1.11.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+
+<!--导航-->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">切换导航</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" id="NavBrand">昆汀电影博物馆</a>
+        </div>
+
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">轮播</a></li>
+                <li><a href="#">简述</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">剧情 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">低俗小说</a></li>
+                        <li><a href="#">无耻混蛋</a></li>
+                        <li><a href="#">杀死比尔</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">嗷嗷</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">关于</a></li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
+
+<p>
+    aaaaaaaaaaaa
+    aaaaaaa
+    aaaaa
+    aaaaaaa
+</p>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script href="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script><script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><script href="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
 </html>
